--- a/week01/media-query.html
+++ b/week01/media-query.html
@@ -6,6 +6,7 @@
     <title>WDD 230 - Media Query</title>
     <meta name="author" content="Johannes Masebe">
     <meta name="description" content="WDD 230 - Media Query page">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="../week01/styles/media-query.css">
