--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="WDD 230 - Web Frontend Development, Jojo Masebe course assignment portal">
     <meta name="author" content="Jojo Masebe">
-    <title>Jojo Masebe - WDD 230 - Web Frontend Development</title>
+    <title>Johannes Masebe - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
 </head>
 <body>
     <header>
         <h1>WDD 230: Web Frontend Development</h1>
-        <img src="images/profile.jpg" width="auto" alt="profile_picture">
+        <img src="images/profile.webp" width="auto" alt="profile_picture">
         <span>Johannes Masebe</span>
     </header>
         <nav>
