--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="WDD 230 - Web Frontend Development, Jojo Masebe course assignment portal">
-    <meta name="author" content="Jojo Masebe">
-    <title>Johannes Masebe - WDD 230 - Web Frontend Development</title>
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/larger.css">
-</head>
-<body>
-    <header>
-        <h1>WDD 230: Web Frontend Development</h1>
-        <img src="images/profile.webp" width="auto" alt="profile_picture">
-        <span>Johannes Masebe</span>
-    </header>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="WDD 230 - Web Frontend Development, Johannes Masebe course assignment portal">
+        <meta name="author" content="Jojo Masebe">
+        <title>Johannes Masebe - WDD 230 - Web Frontend Development</title>
+        <link rel="stylesheet" href="styles/base.css">
+        <link rel="stylesheet" href="styles/larger.css">
+    </head>
+    <body>
+        <header>
+            <img src="images/profile.webp" width="auto" alt="profile_picture">
+            <span>Johannes Masebe</span>
+        </header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li class="active"><a href="#home">Home</a></li>
                 <li><a href="#chamber">Chamber</a></li>
                 <li><a href="#site-plan">Site Plan</a></li>
                 <li><a href="#form">Form</a></li>
