--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,10 +8,11 @@
         <title>Johannes Masebe - WDD 230 - Web Frontend Development</title>
         <link rel="stylesheet" href="styles/base.css">
         <link rel="stylesheet" href="styles/larger.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
     </head>
     <body>
         <header>
-            <img src="images/profile.webp" width="auto" alt="profile_picture">
+            <img src="images/profile.webp" alt="profile_picture">
             <span>Johannes Masebe</span>
         </header>
         <nav>
