--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li class="active"><a href="#home">Home</a></li>
-                <li><a href="#chamber">Chamber</a></li>
+                <li><a href="week01/chamber-site-plan.html">Chamber</a></li>
                 <li><a href="#site-plan">Site Plan</a></li>
                 <li><a href="#form">Form</a></li>
             </ul>
