--- a/week02/design.html
+++ b/week02/design.html
@@ -32,7 +32,7 @@
       <section>
         <h3>List</h3>
         <ul>
-          <li>Item 1</li>
+          <li><a href="https://codepen.io/J-Masebe/pen/WNmmwjO">Link to Codepen</a></li>
           <li>Item 2</li>
           <li>Item 3<br /><br /></li>
           <li>Item 4</li>
