--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <h2>Information</h2>         
         </section>
         <!-- Embed Google Map -->
-        <iframe src="https://www.google.com/maps/embed/v1/place?key=
-        &q=Space+Needle,Seattle+WA" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1lhs71HbZ6S6cAR6VQVrpW2dolhw&hl=en&ehbc=2E312F" width="640" height="480"></iframe>
+
     </main>
     <footer>
         <p>&copy; <span id="currentYear"></span> Johannes Masebe, South Africa</p>
