--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
         </ul>
     </nav>
     <main>
-        <picture>
-            <img src="images/cape_town_africa_temple.webp" alt="Favorite Temple" class="hero-image">
-        </picture>
-        <div class="overlay">Cape Town Temple</div>
+        <div class="hero">
+            <picture>
+                <img src="images/cape_town_africa_temple.webp" alt="Favorite Temple" class="hero-image">
+            </picture>
+            <div class="overlay">Cape Town Temple</div>
+        </div>
+        
         <h1>WDD 230: Web Frontend Development</h1>
         <section class="card">
             <h2>Learning Activities</h2>
@@ -50,9 +53,9 @@
         <section class="card">
             <h2>Information</h2>         
         </section>
-        <!-- Embed Google Map -->
-        <iframe src="https://www.google.com/maps/d/embed?mid=1lhs71HbZ6S6cAR6VQVrpW2dolhw&hl=en&ehbc=2E312F" width="640" height="480"></iframe>
-
+        <section>
+            <iframe src="https://www.google.com/maps/d/embed?mid=1lhs71HbZ6S6cAR6VQVrpW2dolhw&hl=en&ehbc=2E312F" width="640" height="480"></iframe>
+        </section>
     </main>
     <footer>
         <p>&copy; <span id="currentYear"></span> Johannes Masebe, South Africa</p>
