--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Johannes Masebe">
     <title>Johannes Masebe - WDD 230 - Web Frontend Development</title>
     <link rel="icon" href="/chamber/images/favicon.ico">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
@@ -35,7 +36,7 @@
             <picture>
                 <img src="images/cape_town_africa_temple.webp" alt="Favorite Temple" class="hero-image">
             </picture>
-            <div class="overlay">Cape Town Temple</div>
+            <div class="overlay">Cape Town Temple</div>     
         </div>
         
         <h1>WDD 230: Web Frontend Development</h1>
