--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,7 @@
     </header>
     <main>
         <section id="hero">
-            <img src="images/cape-town-image.webp" alt="Cape Town Skyline">
+            <img src="images/cape-town.webp" alt="Cape Town Skyline">
             <section id="cta-overlay">
                 <div class="cta-content">
                     <h2>Join the Cape Town Chamber of Commerce</h2>
