--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
             <li class="active"><a href="#home">Home</a></li>
             <li><a href="chamber/">Chamber</a></li>
-            <li><a href="#site-plan">Site Plan</a></li>
+            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="#form">Form</a></li>
         </ul>
     </nav>
@@ -43,12 +43,12 @@
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
-                <li><a href="week01/holygrail.html">Week 1 Activity</a></li>
-                <li><a href="week02/design.html">Week 2 Activity</a></li>
-                <li><a href="week02/design.html">Week 3 Activity</a></li>
-                <li><a href="week02/design.html">Week 4 Activity</a></li>
-                <li><a href="week02/design.html">Week 5 Activity</a></li>
-                <li><a href="week02/design.html">Week 6 Activity</a></li>
+                <li>Week 01: <a href="week01/holygrail.html">Holy Grail</a>, <a href="week01/chamber-site-plan.html">Site Plan</a>, <a href="week01/media-query.html">Media Query</a></li>
+                <li>Week 02: <a href="week02/bom.html">BOM</a>, <a href="week02/design.html">Design</a></li>
+                <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
+                <li><a href="week02/design.html">Week 04: Activity</a></li>
+                <li><a href="week02/design.html">Week 05: Activity</a></li>
+                <li><a href="week02/design.html">Week 06: Activity</a></li>
             </ul>
         </section>
         <section class="card">
