--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <section class="card">
             <h2>Information</h2>         
         </section>
-        <section>
-            <iframe src="https://www.google.com/maps/d/embed?mid=1lhs71HbZ6S6cAR6VQVrpW2dolhw&hl=en&ehbc=2E312F" width="640" height="480"></iframe>
+        <section class="card" id="map-card">
+            <iframe src="https://www.google.com/maps/d/embed?mid=1lhs71HbZ6S6cAR6VQVrpW2dolhw&hl=en&ehbc=2E312F" width="100%" height="480"></iframe>
         </section>
     </main>
     <footer>
