--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul>
                 <li>Week 01: <a href="week01/holygrail.html">Holy Grail</a>, <a href="week01/chamber-site-plan.html">Site Plan</a>, <a href="week01/media-query.html">Media Query</a></li>
                 <li>Week 02: <a href="week02/bom.html">BOM</a>, <a href="week02/design.html">Design</a></li>
-                <li>Week 03: <a href="week03/images/landscape.webp">WebP</a>, <a href="week03/responsive-images.html">Responsive Images</a></li>
+                <li>Week 03: <a href="week03/images/landscape.webp">WebP</a>, <a href="week03/responsive-images.html">Responsive Images</a>, <a href="week03/bom.html">BOM v2</a></li>
                 <li><a href="week02/design.html">Week 04: Activity</a></li>
                 <li><a href="week02/design.html">Week 05: Activity</a></li>
                 <li><a href="week02/design.html">Week 06: Activity</a></li>
