--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,12 +22,13 @@
         <h1>Cape Town Chamber of Commerce</h1>
         <nav class="navigation">
             <a class="active" href="#home">Home</a>
+            <a href="discover.html">Discover</a>
             <a href="#events">Events</a>
             <a href="#join">Join</a>
         </nav>
         <button id="menu" title="Menu" onclick="toggleMenu()">☰</button>
     </header>
-    <main>
+    <main class="flex-layout">
         <section id="hero">
             <img src="images/cape-town.webp" alt="Cape Town Skyline">
             <section id="cta-overlay">
