--- a/week03/lazyload.html
+++ b/week03/lazyload.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/lazy-loading.css">
     <title>Lazy Loading Example</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <h1>Lazy Loading</h1>
     </header>
     <main>
-        <img src="images/a.jpg" alt="Image 1" loading="lazy" class="lazy-img">
+        <img src="images/a.jpg" alt="Image 1" loading="lazy" class="lazy-img" >
         <img src="images/b.jpg" alt="Image 2" loading="lazy" class="lazy-img">
         <img src="images/c.jpg" alt="Image 3" loading="lazy" class="lazy-img">
         <img src="images/d.jpg" alt="Image 4" loading="lazy" class="lazy-img">
