--- a/week04/tablebuild.html
+++ b/week04/tablebuild.html
@@ -8,41 +8,38 @@
 </head>
 <body>
     <table>
-        <caption>Table 1: Account Feature Comparison</caption>
         <thead>
             <tr>
-                <th>Feature</th>
+                <th colspan="4">ACME Wildwest Services</th>
+            </tr>
+            <tr>
+                <th></th>
                 <th>Basic</th>
-                <th>Standard</th>
                 <th>Premium</th>
+                <th>Deluxe</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Storage</td>
+                <td>Feature 1</td>
                 <td>✔️</td>
                 <td>✔️</td>
                 <td>✔️</td>
             </tr>
             <tr>
-                <td>Users</td>
-                <td>1</td>
-                <td>5</td>
-                <td>Unlimited</td>
-            </tr>
-            <tr>
-                <td>Support</td>
+                <td>Feature 2</td>
                 <td>❌</td>
                 <td>✔️</td>
                 <td>✔️</td>
             </tr>
             <tr>
-                <td>Subscription</td>
+                <td>Feature 3</td>
                 <td>❌</td>
-                <td>✔️</td>
+                <td>❌</td>
                 <td>✔️</td>
             </tr>
         </tbody>
+        <caption>Table 1: Account Feature Comparison</caption>
     </table>
 </body>
 </html>
