--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li>Week 02: <a href="week02/bom.html">BOM</a>, <a href="week02/design.html">Design</a>, <a href="https://codepen.io/J-Masebe/pen/WNmmwjO">CodePen - Hamburger Menu</a></li>
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a>, <a href="week03/responsive-images.html">Responsive Images</a>, <a href="week03/bom.html">Local Storage</a></li>
                 <li>Week 04: <a href="https://codepen.io/J-Masebe/pen/QWoPjjm">CodePen - CSS Pseudo-Classes</a>, <a href="week04/images/w04_W3C_exercises.png">W3C - CSS Combinators</a>, 
-                    <a href="week04/tablebuild.html">HTML Tables</a></li>
+                    <a href="week04/tablebuild.html">HTML Tables</a>, <a href="/Form-start/">HTML Forms</a></li>
             
                 <li><a href="week02/design.html">Week 05: Activity</a></li>
                 <li><a href="week02/design.html">Week 06: Activity</a></li>
