--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="active"><a href="#home">Home</a></li>
             <li><a href="chamber/">Chamber</a></li>
             <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="#form">Form</a></li>
+            <li><a href="form.html">Form</a></li>
         </ul>
     </nav>
     <main>
@@ -51,8 +51,8 @@
                 <li>Week 04: <a href="https://codepen.io/J-Masebe/pen/QWoPjjm">CodePen - CSS Pseudo-Classes</a>, <a href="week04/images/w04_W3C_exercises.png">W3C - CSS Combinators</a>, 
                     <a href="week04/tablebuild.html">HTML Tables</a>, <a href="/Form-start/">HTML Forms</a></li>
             
-                <li><a href="week02/design.html">Week 05: Activity</a></li>
-                <li><a href="week02/design.html">Week 06: Activity</a></li>
+                <li>Week 05: <a href="week02/design.html">Activity</a></li>
+                <li>Week 06: <a href="week02/design.html">Activity</a></li>
             </ul>
         </section>
         <section class="card">
