--- a/form.html
+++ b/form.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="WDD 230 - Web Frontend Development, Registration to the portal">
+    <meta name="description" content="Registration Form to the portal">
     <meta name="author" content="Johannes Masebe">
-    <title>Johannes Masebe - WDD 230 - Registration</title>
+    <title>Registration Form</title>
     <link rel="icon" href="/chamber/images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
