--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,7 +24,7 @@
             <a class="active" href="#home">Home</a>
             <a href="discover.html">Discover</a>
             <a href="#events">Events</a>
-            <a href="#join">Join</a>
+            <a href="join.html">Join</a>
         </nav>
         <button id="menu" title="Menu" onclick="toggleMenu()">☰</button>
     </header>
