--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <picture>
                 <source srcset="images/hero-small.webp" media="(max-width: 400px)">
                 <source srcset="images/hero-medium.webp" media="(max-width: 960px)">
-                <img src="images/hero-large.webp" alt="Favorite Temple" class="hero-image" width="100%" height="auto">
+                <img src="images/hero-large.webp" alt="Favorite Temple" class="hero-image" width="600" height="400">
             </picture>
             <div class="overlay">Johannesburg Temple</div>     
         </div>
@@ -60,9 +60,9 @@
             <p><span class="label">Current Weather: </span><span class="weather" id="weather-info"></span></p>
             <p><span class="label">Number of Visits: </span><span class="visits"></span></p>         
         </section>
-        <section class="card" id="map-card">
-            <iframe src="https://www.google.com/maps/d/embed?mid=1W6FiG580WItytjzonX7QIFkzYoZXh1I&hl=en&ehbc=2E312F" title="maps" width="100%" height="480" loading="lazy"></iframe>
-        </section>
+        <div class="card" id="map-card">
+            <iframe src="https://www.google.com/maps/d/embed?mid=1W6FiG580WItytjzonX7QIFkzYoZXh1I&hl=en&ehbc=2E312F" title="maps" loading="lazy"></iframe>
+        </div>
         
     </main>
     <footer>
