--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,7 @@
                 <div class="cta-content">
                     <h2>Join the Cape Town Chamber of Commerce</h2>
                     <p>Discover opportunities, connect with businesses, and drive growth in Cape Town.</p>
-                    <a href="#join" class="cta-button">Join Now</a>
+                    <a href="join.html" class="cta-button">Join Now</a>
                 </div>
             </section>
         </section>
