--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li>Week 04: <a href="https://codepen.io/J-Masebe/pen/QWoPjjm">CodePen - CSS Pseudo-Classes</a>, <a href="week04/images/w04_W3C_exercises.png">W3C - CSS Combinators</a>, 
                     <a href="week04/tablebuild.html">HTML Tables</a>, <a href="/Form-start/">HTML Forms</a></li>
             
-                <li>Week 05: <a href="https://codepen.io/J-Masebe/pen/rNRbpYM">Pseudo Element</a>, <a href="week05/new-ward-members.json">JSON</a></li>
+                <li>Week 05: <a href="https://codepen.io/J-Masebe/pen/rNRbpYM">Pseudo Element</a>, <a href="week05/new-ward-members.json">JSON</a>, <a href="week05/prophets.html">Prophets</a></li>
                 <li>Week 06: <a href="week02/design.html">Activity</a></li>
             </ul>
         </section>
