--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,7 +23,7 @@
         <nav class="navigation">
             <a class="active" href="#home">Home</a>
             <a href="discover.html">Discover</a>
-            <a href="#events">Events</a>
+            <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
         </nav>
         <button id="menu" title="Menu" onclick="toggleMenu()">☰</button>
