--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site plan for the Cape Town Chamber of Commerce website">
+    <meta name="description" content="Members Directory for the Cape Town Chamber of Commerce website">
     <meta name="keywords" content="Cape Town, Chamber of Commerce, business, networking, economic development">
     <meta name="author" content="Johannes Masebe">
-    <title>Cape Town Chamber of Commerce</title>
+    <title>Members Directory</title>
     <link rel="stylesheet" href="styles/normalise.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css" media="screen and (min-width: 768px)">
