--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site plan for the Cape Town Chamber of Commerce website">
+    <meta name="description" content="Main page for the Cape Town Chamber of Commerce website">
     <meta name="keywords" content="Cape Town, Chamber of Commerce, business, networking, economic development">
     <meta name="author" content="Johannes Masebe">
     <title>Cape Town Chamber of Commerce</title>
