final-title-change

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Members Directory for the Cape Town Chamber of Commerce website">
     <meta name="keywords" content="Cape Town, Chamber of Commerce, business, networking, economic development">
     <meta name="author" content="Johannes Masebe">
-    <title>Members Directory</title>
+    <title>Members Directory - Cape Town Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalise.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css" media="screen and (min-width: 768px)">
