--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -12,7 +12,7 @@
       content="Cape Town, Chamber of Commerce, business, networking, economic development"
     />
     <meta name="author" content="Johannes Masebe" />
-    <title>Cape Town Chamber of Commerce</title>
+    <title>Thank you for Joining!</title>
     <link rel="stylesheet" href="styles/normalise.css" />
     <link rel="stylesheet" href="styles/base.css" />
     <link
@@ -47,7 +47,7 @@
     <header>
       <h1>Cape Town Chamber of Commerce</h1>
       <nav class="navigation">
-        <a class="active" href="#home">Home</a>
+        <a class="active" href="/chamber/">Home</a>
         <a href="discover.html">Discover</a>
         <a href="directory.html">Directory</a>
         <a href="join.html">Join</a>
@@ -59,12 +59,14 @@
         <img src="images/cape-town.webp" alt="Cape Town Skyline" />
         <section id="cta-overlay">
           <div class="cta-content">
-            <h2>Join the Cape Town Chamber of Commerce</h2>
+            <h2>Thank you for joining the Cape Town Chamber of Commerce</h2>
             <p>
-              Discover opportunities, connect with businesses, and drive growth
-              in Cape Town.
+              We look forward to collaborating with you. Our network of partner
+              members will now be able to connect with you to discover
+              opportunities, connect with businesses, and drive growth in Cape
+              Town.
             </p>
-            <a href="join.html" class="cta-button">Join Now</a>
+            <a href="/chamber/" class="cta-button">Return to Home Page</a>
           </div>
         </section>
       </section>
