--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -1,53 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site plan for the Cape Town Chamber of Commerce website">
-    <meta name="keywords" content="Cape Town, Chamber of Commerce, business, networking, economic development">
-    <meta name="author" content="Johannes Masebe">
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Site plan for the Cape Town Chamber of Commerce website"
+    />
+    <meta
+      name="keywords"
+      content="Cape Town, Chamber of Commerce, business, networking, economic development"
+    />
+    <meta name="author" content="Johannes Masebe" />
     <title>Cape Town Chamber of Commerce Site Plan</title>
-    <link rel="stylesheet" href="styles\chamber.css">
-    <link rel="stylesheet" href="styles\chamber-large.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arial">
-    
-</head>
-<body>
+    <link rel="stylesheet" href="styles\chamber.css" />
+    <link rel="stylesheet" href="styles\chamber-large.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Arial"
+    />
+  </head>
+  <body>
     <div class="container">
-        <header>
-            <h1>Cape Town Chamber of Commerce</h1>
-        </header>
-        <nav>
-            <a class="active" href="#purpose">Site Purpose</a>
-            <a href="#scenarios">Scenarios</a>
-            <a href="#color-schema">Color Schema</a>
-            <a href="#typography">Typography</a>
-        </nav>
-        <section id="purpose">
-            <h2>Site Purpose</h2>
-            <p>The Cape Town Chamber of Commerce aims to promote local businesses, facilitate networking opportunities, and advocate for economic development within the Cape Town area. It serves as a resource for both local businesses and the community to foster growth and prosperity.</p>
-        </section>
-        <section id="scenarios">
-            <h2>Scenarios</h2>
-            <ul>
-                <li>How can I join the Cape Town Chamber of Commerce?</li>
-                <li>What events are being organized by the chamber this month?</li>
-                <li>Who are the current members of the chamber, and how can I get in touch with them?</li>
-            </ul>
-        </section>
-        <section id="color-schema">
-            <h2>Color Schema</h2>
-            <p>The primary color scheme includes a deep blue (#005A9C) for headers and a lighter blue (#007ACC) for navigation and highlights. This palette reflects the vibrant and dynamic nature of Cape Town's coastal environment.</p>
-        </section>
-        <section id="typography">
-            <h2>Typography</h2>
-            <p>The website will use Arial for its clean readability and versatility, applied across headings and body text to ensure information is accessible and easy to navigate.</p>
-        </section>
-        <footer>
-            <p>&copy; <span id="currentYear"></span> Johannes Masebe, South Africa</p>
-
-        </footer>
-        <script src="../scripts/getDates.js"></script>
+      <header>
+        <h1>Cape Town Chamber of Commerce</h1>
+      </header>
+      <nav>
+        <a class="active" href="#purpose">Site Purpose</a>
+        <a href="#scenarios">Scenarios</a>
+        <a href="#color-schema">Color Schema</a>
+        <a href="#typography">Typography</a>
+      </nav>
+      <section id="purpose">
+        <h2>Site Purpose</h2>
+        <p>
+          The Cape Town Chamber of Commerce aims to promote local businesses,
+          facilitate networking opportunities, and advocate for economic
+          development within the Cape Town area. It serves as a resource for
+          both local businesses and the community to foster growth and
+          prosperity.
+        </p>
+      </section>
+      <section id="scenarios">
+        <h2>Scenarios</h2>
+        <ul>
+          <li>How can I join the Cape Town Chamber of Commerce?</li>
+          <li>What events are being organized by the chamber this month?</li>
+          <li>
+            Who are the current members of the chamber, and how can I get in
+            touch with them?
+          </li>
+        </ul>
+      </section>
+      <section id="color-schema">
+        <h2>Color Schema</h2>
+        <p>
+          The primary color scheme includes a deep blue (#005A9C) for headers
+          and a lighter blue (#007ACC) for navigation and highlights. This
+          palette reflects the vibrant and dynamic nature of Cape Town's coastal
+          environment.
+        </p>
+      </section>
+      <section id="typography">
+        <h2>Typography</h2>
+        <p>
+          The website will use Arial for its clean readability and versatility,
+          applied across headings and body text to ensure information is
+          accessible and easy to navigate.
+        </p>
+      </section>
+      <footer>
+        <p>
+          &copy; <span id="currentYear"></span> Johannes Masebe, South Africa
+        </p>
+      </footer>
+      <script src="../scripts/getDates.js"></script>
     </div>
-</body>
+  </body>
 </html>
