--- a/week02/design.html
+++ b/week02/design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,8 +9,10 @@
   <body>
     <header>
       <div class="banner">
-        <p>🪲 The Lazy Bug<br />Join us for the ribbon cutting cermony!<br />Friday
-            at 11:00 AM!</p>
+        <p>
+          🪲 The Lazy Bug<br />Join us for the ribbon cutting cermony!<br />Friday
+          at 11:00 AM!
+        </p>
       </div>
       <h1>Design Principles</h1>
     </header>
@@ -32,7 +34,11 @@
       <section>
         <h3>List</h3>
         <ul>
-          <li><a href="https://codepen.io/J-Masebe/pen/WNmmwjO">Link to Codepen</a></li>
+          <li>
+            <a href="https://codepen.io/J-Masebe/pen/WNmmwjO"
+              >Link to Codepen</a
+            >
+          </li>
           <li>Item 2</li>
           <li>Item 3<br /><br /></li>
           <li>Item 4</li>
