--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="WDD 230 - Web Frontend Development, Johannes Masebe course assignment portal">
-    <meta name="author" content="Johannes Masebe">
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="WDD 230 - Web Frontend Development, Johannes Masebe course assignment portal"
+    />
+    <meta name="author" content="Johannes Masebe" />
     <title>Johannes Masebe - WDD 230 - Web Frontend Development</title>
-    <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="styles/responsive-images.css">
+    <link rel="icon" href="/chamber/images/favicon.ico" />
+    <link rel="stylesheet" href="styles/responsive-images.css" />
+  </head>
+  <body>
+    <header></header>
 
-</head>
-<body>
-    <header>
-
-    </header>
-   
     <main>
-        <div class="hero">
-            <picture>
-              <source srcset="images/hero-small.webp" media="(max-width: 500px)">
-              <source srcset="images/hero-medium.webp" media="(max-width: 1000px)">
-              <img src="images/hero-large.webp" alt="table setting" width="1500" height="750">
-            </picture>
-          </div>
-        
+      <div class="hero">
+        <picture>
+          <source srcset="images/hero-small.webp" media="(max-width: 500px)" />
+          <source
+            srcset="images/hero-medium.webp"
+            media="(max-width: 1000px)"
+          />
+          <img
+            src="images/hero-large.webp"
+            alt="table setting"
+            width="1500"
+            height="750"
+          />
+        </picture>
+      </div>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
