--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Prophets - Latter-day Saints">
-    <meta name="author" content="Johannes Masebe">
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Prophets - Latter-day Saints" />
+    <meta name="author" content="Johannes Masebe" />
     <title>Prophets - Latter-day Saints</title>
-    <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="styles/prophets.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
-</head>
-<body>
+    <link rel="icon" href="/chamber/images/favicon.ico" />
+    <link rel="stylesheet" href="styles/prophets.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
+    />
+  </head>
+  <body>
     <header>
-        <h1>Latter-day Prophets</h1>
-      </header>
-      <main>
-        <div id="cards"></div>
-      </main>
-      <footer>
-        Johannes Masebe | Latter-day Prophets
-      </footer>
-        <script src="scripts/prophets.js"></script> 
-</body>
+      <h1>Latter-day Prophets</h1>
+    </header>
+    <main>
+      <div id="cards"></div>
+    </main>
+    <footer>Johannes Masebe | Latter-day Prophets</footer>
+    <script src="scripts/prophets.js"></script>
+  </body>
 </html>
