--- a/week01/holygrail.html
+++ b/week01/holygrail.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Holygrail</title>
-    <link type="text/css" rel="stylesheet" href="../week01/styles/holygrail.css">
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="../week01/styles/holygrail.css"
+    />
   </head>
   <body>
     <header>
-        <h1 contenteditable>Header.com</h1>
-      </header>
-      <nav>Main Navigation</nav>
-      <main contenteditable>Main Content Area</main>
-      <aside contenteditable>Right Sidebar</aside>
-      <footer contenteditable>Footer Content — Header.com</footer>
+      <h1 contenteditable>Header.com</h1>
+    </header>
+    <nav>Main Navigation</nav>
+    <main contenteditable>Main Content Area</main>
+    <aside contenteditable>Right Sidebar</aside>
+    <footer contenteditable>Footer Content — Header.com</footer>
   </body>
 </html>
