--- a/week02/bom.html
+++ b/week02/bom.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Book of Mormon - Top 10">
-    <meta name="author" content="Johannes Masebe">
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Book of Mormon - Top 10" />
+    <meta name="author" content="Johannes Masebe" />
     <title>Book of Mormon - Top 10</title>
-    <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="styles/bom.css">
-
-</head>
-<body>
-    <header>
-
-    </header>
+    <link rel="icon" href="/chamber/images/favicon.ico" />
+    <link rel="stylesheet" href="styles/bom.css" />
+  </head>
+  <body>
+    <header></header>
 
     <h1>📖 Book of Mormon - Top 10</h1>
     <main>
-        <label for="favchap">Enter Book and Chapter: </label>
-        <input type="text" id="favchap" placeholder="Alma 5">
-        <button type="submit">Add Chapter</button>
-        <ul id="list"></ul>
+      <label for="favchap">Enter Book and Chapter: </label>
+      <input type="text" id="favchap" placeholder="Alma 5" />
+      <button type="submit">Add Chapter</button>
+      <ul id="list"></ul>
     </main>
     <footer>
-        <p>&copy; <span id="currentYear"></span> Johannes Masebe, South Africa</p>
-        <p id="lastModified"></p>
+      <p>&copy; <span id="currentYear"></span> Johannes Masebe, South Africa</p>
+      <p id="lastModified"></p>
     </footer>
     <script src="../scripts/getDates.js"></script>
     <script src="scripts/bom.js"></script>
-</body>
+  </body>
 </html>
