--- a/chamber/index.html
+++ b/chamber/index.html
@@ -96,6 +96,7 @@
       <p id="lastModified"></p>
     </footer>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/appData.js"></script>
     <script src="scripts/navigationMenu.js"></script>
   </body>
 </html>
