--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -40,7 +40,7 @@
     <header>
       <h1>Cape Town Chamber of Commerce</h1>
       <nav class="navigation">
-        <a href="/chamber/">Home</a>
+        <a href="index.html">Home</a>
         <a href="discover.html">Discover</a>
         <a class="active" href="directory.html">Directory</a>
         <a href="join.html">Join</a>
