--- a/chamber/join.html
+++ b/chamber/join.html
@@ -41,7 +41,7 @@
     <header>
       <h1>Cape Town Chamber of Commerce</h1>
       <nav class="navigation">
-        <a href="/chamber/">Home</a>
+        <a href="index.html">Home</a>
         <a href="discover.html">Discover</a>
         <a href="directory.html">Directory</a>
         <a href="join.html" class="active">Join</a>
