--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -47,7 +47,7 @@
     <header>
       <h1>Cape Town Chamber of Commerce</h1>
       <nav class="navigation">
-        <a class="active" href="/chamber/">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="discover.html">Discover</a>
         <a href="directory.html">Directory</a>
         <a href="join.html">Join</a>
@@ -66,7 +66,7 @@
               opportunities, connect with businesses, and drive growth in Cape
               Town.
             </p>
-            <a href="/chamber/" class="cta-button">Return to Home Page</a>
+            <a href="index.html" class="cta-button">Return to Home Page</a>
           </div>
         </section>
       </section>
