--- a/week02/bom.html
+++ b/week02/bom.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Book of Mormon - Top 10" />
     <meta name="author" content="Johannes Masebe" />
     <title>Book of Mormon - Top 10</title>
-    <link rel="icon" href="/chamber/images/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/bom.css" />
   </head>
   <body>
