--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -9,7 +9,7 @@
     />
     <meta name="author" content="Johannes Masebe" />
     <title>Johannes Masebe - WDD 230 - Web Frontend Development</title>
-    <link rel="icon" href="/chamber/images/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/responsive-images.css" />
   </head>
   <body>
