--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Prophets - Latter-day Saints" />
     <meta name="author" content="Johannes Masebe" />
     <title>Prophets - Latter-day Saints</title>
-    <link rel="icon" href="/chamber/images/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/prophets.css" />
     <link
       rel="stylesheet"
