--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -20,7 +20,7 @@
       href="styles/larger.css"
       media="screen and (min-width: 768px)"
     />
-    <link rel="icon" href="/chamber/images/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
     <meta
       property="og:title"
       content="Johannes Masebe - WDD 230 - Web Frontend Development"
