--- a/chamber/join.html
+++ b/chamber/join.html
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="styles/join.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Arial"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
     />
-    <link rel="icon" href="/chamber/images/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
     <meta
       property="og:title"
       content="Johannes Masebe - WDD 230 - Web Frontend Development"
