--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Arial"
     />
-    <link rel="icon" href="/chamber/images/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
     <meta
       property="og:title"
       content="Johannes Masebe - WDD 230 - Web Frontend Development"
