--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Registration Form to the portal" />
     <meta name="author" content="Johannes Masebe" />
     <title>Registration Form</title>
-    <link rel="icon" href="/chamber/images/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/larger.css" />
