--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,7 +22,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Arial"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
     />
     <link rel="icon" href="images/favicon.ico" />
     <meta
